test: add pre-reparenting coverage for GTablePotential, Choice and CEA flows
  Establishes the test baseline required before reparenting GTablePotential
  from TablePotential to AbstractIndexedPotential (Redesign 1, phase 5).

  New test classes:
  - ChoiceTest (20 tests): constructors, setValue, addValue before and after
    setValue, copy, sameInformation, getStates, toString.
  - GTablePotentialTest (15 tests): documents the all-zero values[] invariant,
    the role=null quirk caused by super(variables, null), and correct
    dimensions/offsets. These will be the first regression signals after
    reparenting.

  Extended test classes:
  - DiscretePotentialOperationsTest: replaces the empty testMerge() stub with
    four sub-cases (plain TablePotential merge, GTablePotential<CEP> merge,
    context-variable case, size-mismatch exception); adds
    testMultiplyAndMaximize_choiceTableIsPopulated(),
    testMultiplyAndMaximize_tiedStatesBothRecorded(), and
    testMultiplyAndMaximize_threeWayTieAllRecorded(). Documents that
    variablesToKeep is built from a HashSet so position ordering beyond
    index 0 is non-deterministic.